# watchagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/agents/: event-reviewer.md
.cursor/rules/: error-handling.mdc  event-schema.mdc
.cursor/skills/: analyze_data.py
.github/workflows/: ci.yml
app/: api.py  db.py  detector.py  models.py  poller.py
tests/: test_api.py  test_dedup.py  test_events.py
